[FIX]: web-ui: fix overflowableText

--- a/packages/web-ui/src/core/OverflowableText/index.less
+++ b/packages/web-ui/src/core/OverflowableText/index.less
@@ -1,5 +1,6 @@
 .g-overflowable-text {
     position: relative;
+    white-space: nowrap;
 
     > .wrap-text {
         &,
